--- a/ProgramA.css
+++ b/ProgramA.css
@@ -1844,7 +1844,7 @@
   }
 
   .container-1eFtFS::after {
-    content: "Stay comfy ?";
+    content: "Stay comfy ♥";
     position: fixed;
     top: 220px;
     bottom: 85px;
